[gd_scene load_steps=13 format=3 uid="uid://c7gl3p14kbnd"]

[ext_resource type="PackedScene" uid="uid://c5cweqqdwboqj" path="res://Main/Player/Player.tscn" id="1_iefsm"]
[ext_resource type="Script" path="res://Main/World/world.gd" id="1_yw74k"]
[ext_resource type="Texture2D" uid="uid://b12p8wdnimno5" path="res://Assets/HUD/9patchalpha.png" id="2_4wjgg"]
[ext_resource type="Shader" path="res://shaders/Dither.gdshader" id="2_h8b13"]
[ext_resource type="MeshLibrary" uid="uid://d2o2eks8m65m5" path="res://dungeon_gridmap.tres" id="3_gx3tb"]
[ext_resource type="MeshLibrary" uid="uid://by1b20yc5rh02" path="res://dungeon_scenes_gridmap.tres" id="4_g6k2w"]
[ext_resource type="AudioStream" uid="uid://c6xj4g6snv52o" path="res://Assets/SFX/crickets.wav" id="5_oj6hi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lj5sh"]
shader = ExtResource("2_h8b13")
shader_parameter/colors = 8.0
shader_parameter/dither = 0.15

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_voh8m"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_sryva"]
sky_material = SubResource("ProceduralSkyMaterial_voh8m")

[sub_resource type="Environment" id="Environment_wva17"]
background_mode = 2
background_energy_multiplier = 0.8
sky = SubResource("Sky_sryva")
tonemap_mode = 3
glow_bloom = 0.3
adjustment_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_dljvl"]
size = Vector2(4, 4)

[node name="World" type="Node"]
script = ExtResource("1_yw74k")
metadata/_edit_horizontal_guides_ = [0.0, 180.0, 90.0]
metadata/_edit_vertical_guides_ = [320.0, 160.0]

[node name="ScreenMarginContainer" type="MarginContainer" parent="."]
offset_right = 213.0
offset_bottom = 120.0

[node name="mainViewportContainer" type="SubViewportContainer" parent="ScreenMarginContainer"]
material = SubResource("ShaderMaterial_lj5sh")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="ScreenMarginContainer/mainViewportContainer"]
unique_name_in_owner = true
audio_listener_enable_3d = true
size = Vector2i(213, 120)
render_target_update_mode = 4

[node name="VFXNodes" type="Node3D" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
visible = false
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
environment = SubResource("Environment_wva17")

[node name="planeMesh" type="MeshInstance3D" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
visible = false
mesh = SubResource("PlaneMesh_dljvl")
skeleton = NodePath("../../../..")

[node name="Warrior" parent="ScreenMarginContainer/mainViewportContainer/SubViewport" instance=ExtResource("1_iefsm")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, 1)

[node name="screenViewport" parent="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior/CanvasLayer/SubViewportContainer" index="0"]
handle_input_locally = false

[node name="weaponSprite" parent="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" index="5"]
transform = Transform3D(0.0233537, 0.00960688, -0.999673, 0.29527, 0.955279, 0.0160779, 0.955129, -0.295551, 0.0194725, 0.134, -0.02, -0.171)

[node name="FluteSprite" parent="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" index="6"]
transform = Transform3D(1, 0, 0, 0, 0.996195, -0.0871556, 0, 0.0871556, 0.996195, 0, -0.1, -0.174)

[node name="enemyMarker" parent="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="EnemiesNode" type="Node3D" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="GeometryGridMap" type="GridMap" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
unique_name_in_owner = true
mesh_library = ExtResource("3_gx3tb")
data = {
"cells": PackedInt32Array(0, 0, 1, 2, 0, 0, 2, 1, 0, 2, 2, 0, 1, 2, 0, 0, 2, 0, 65535, 2, 0, 65534, 2, 0, 65534, 1, 0, 65534, 0, 0, 65534, 65535, 0, 65534, 65534, 0, 65535, 65534, 0, 2, 65535, 0, 2, 65534, 0, 1, 65534, 0, 65535, 65533, 0, 65535, 65532, 0, 1, 65533, 0, 1, 65532, 0, 65535, 1, 1, 65535, 0, 1, 65535, 65535, 1, 0, 65535, 1, 1, 65535, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 65532, 1, 0, 65531, 1, 65535, 65531, 0, 1, 65531, 0, 2, 65531, 0, 2, 65529, 0, 1, 65529, 0, 65534, 65531, 0, 65535, 65529, 0, 65534, 65529, 0, 65533, 65529, 0, 2, 65530, 1048578, 1, 65530, 1048578, 0, 65530, 1048578, 65535, 65530, 1048578, 65534, 65530, 1048578, 65533, 65530, 1048578, 65532, 65530, 1048578, 0, 65529, 0, 3, 65531, 0, 3, 65530, 0, 3, 65529, 0, 65532, 65531, 0, 65531, 65531, 0, 65532, 65529, 0, 65531, 65529, 0, 65530, 65531, 0, 65531, 65530, 1048578, 65529, 65531, 0, 65528, 65531, 0, 65527, 65531, 0, 65529, 65529, 0, 65528, 65529, 0, 65527, 65529, 0, 65530, 65530, 1048578, 65529, 65530, 1048578, 65528, 65530, 1048578, 65527, 65530, 1048578, 65530, 65529, 1, 65530, 65528, 1, 65530, 65527, 1, 65531, 65528, 0, 65531, 65527, 0, 65529, 65528, 0, 65529, 65527, 0, 65530, 65526, 1, 65530, 65525, 1, 65529, 65526, 0, 65531, 65524, 0, 65531, 65525, 0, 65531, 65526, 0, 65529, 65525, 0, 65531, 65523, 0, 65531, 65522, 0, 65531, 65521, 0, 65530, 65521, 0, 65529, 65521, 0, 65528, 65521, 0, 65527, 65521, 0, 65526, 65521, 0, 65525, 65521, 0, 65524, 65521, 0, 65529, 65524, 0, 65529, 65523, 0, 65530, 65524, 1, 65530, 65523, 1, 65530, 65522, 1, 65529, 65522, 1, 65528, 65522, 1, 65527, 65522, 1, 65526, 65522, 1, 65525, 65522, 1, 65525, 65523, 1, 65525, 65524, 1, 65525, 65525, 1, 65524, 65522, 0, 65524, 65523, 0, 65524, 65524, 0, 65524, 65525, 0, 65524, 65526, 0, 65526, 65524, 0, 65526, 65523, 0, 65527, 65523, 0, 65528, 65523, 0, 65526, 65525, 0, 65527, 65525, 0, 65527, 65526, 0, 65527, 65527, 0, 65526, 65527, 0, 65525, 65527, 0, 65524, 65527, 0, 65525, 65526, 1, 65526, 65526, 1, 0, 65533, 1, 0, 65534, 1)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="ScenesGridMap" type="GridMap" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
unique_name_in_owner = true
mesh_library = ExtResource("4_g6k2w")

[node name="Fireflies" type="AudioStreamPlayer3D" parent="ScreenMarginContainer/mainViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, -9)
stream = ExtResource("5_oj6hi")
autoplay = true
max_distance = 3.0

[node name="NinePatchRect" type="NinePatchRect" parent="ScreenMarginContainer"]
layout_mode = 2
texture = ExtResource("2_4wjgg")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[connection signal="attacked" from="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" to="." method="_on_warrior_attacked"]
[connection signal="leveling_up" from="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" to="." method="_on_warrior_leveling_up"]
[connection signal="movement" from="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" to="." method="_on_warrior_movement"]
[connection signal="turn_finished" from="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior" to="." method="_on_warrior_turn_finished"]

[editable path="ScreenMarginContainer/mainViewportContainer/SubViewport/Warrior"]
